--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,8 +12,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Debug environment variables
         run: |
-         touch .env
-         echo "${{secrets.DOCKER_DEMO}}" > .env
+          echo "DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}"
+          echo "DOCKER_PASSWORD: *** (masked for security)"
+          echo "DOCKER_DEMO: ${{ secrets.DOCKER_DEMO }}"
+        shell: bash
       - name: Login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Build docker image
