--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,12 +12,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Debug environment variables
         run: |
-          echo "DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}"
-          echo "DOCKER_PASSWORD: *** (masked for security)"
-          echo "DOCKER_DEMO: ${{ secrets.DOCKER_DEMO }}"
-        shell: bash
+          touch .env
+          echo "${{secrets.DOCKER_DEMO}}" > .env
       - name: Login to docker hub
-         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
       - name: Build docker image
         run: docker build -t Balak1696/Pdfapp_CICD.
       - name: Publish image to docker hub
