--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,13 +3,15 @@ name: CICD
 on:
   push:
     branches: [bala-dev]
-
 jobs:
   build:
     runs-on: [ubuntu-latest]
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
+      - run : |
+         touch .env
+         echo "${{secrets.DOCKER_DEMO}}" > .env
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
       - name: Build docker image
