--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
       - run : |
          touch .env
-         echo "${{secrets.DOCKER_DEMO}}" > .env
+         echo "${{secrets.DOCKER_DEMO_FILE}}" > .env
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
       - name: Build docker image
