--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,29 +3,31 @@ name: CICD
 on:
   push:
     branches: [bala-dev]
+
 jobs:
   build:
     runs-on: [ubuntu-latest]
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
-      - run : |
-         touch .env
-         echo "${{secrets.DOCKER_DEMO_FILE}}" > .env
-      - name: Login to docker hub
-       echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: Build docker image
-        run: docker build -t Balak1696/Pdfapp_CICD.
-      - name: Publish image to docker hub
+      - run: |
+          touch .env
+          echo "${{ secrets.DOCKER_DEMO_FILE }}" > .env
+      - name: Login to Docker Hub
+        run: |
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Build Docker image
+        run: docker build -t Balak1696/Pdfapp_CICD .
+      - name: Publish image to Docker Hub
         run: docker push Balak1696/Pdfapp_CICD:latest
         
   deploy:
     needs: build
     runs-on: [aws-ec2]
     steps:
-      - name: Pull image from docker hub
+      - name: Pull image from Docker Hub
         run: docker pull Balak1696/Pdfapp_CICD:latest
       - name: Delete old container
-        run: docker rm -f Pdfapp_CICD-container
-      - name: Run docker container
+        run: docker rm -f Pdfapp_CICD-container || true
+      - name: Run Docker container
         run: docker run -d -p 3000:3000 --name Pdfapp_CICD-container Balak1696/Pdfapp_CICD
