--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,16 +6,17 @@ on:
 
 jobs:
   build:
-    runs-on: [ubuntu-latest]
+      runs-on: self-hosted
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
       - run: |
           touch .env
           echo "${{ secrets.DOCKER_DEMO_FILE }}" > .env
-      - name: Login to Docker Hub
-        run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+     env:
+        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Build Docker image
         run: docker build -t Balak1696/Pdfapp_CICD .
       - name: Publish image to Docker Hub
