--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,33 +2,46 @@ name: CICD
 
 on:
   push:
-    branches: [bala-dev]
+    branches:
+      - bala-dev
 
 jobs:
   build:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
-        - run : |
-         touch .env
-         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-         echo "${{secrets.DOCKER_DEMO_FILE}}" > .env
-      - name: Login to docker hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
-      - name: Build docker image
-        run: docker build -t balak1696/pdfapp_cicd.
-      - name: Publish image to docker hub
+
+      - name: Set up environment variables
+        run: |
+          touch .env
+          echo "${{ secrets.DOCKER_DEMO_FILE }}" > .env
+
+      - name: Login to Docker Hub
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t balak1696/pdfapp_cicd:latest .
+
+      - name: Publish image to Docker Hub
         run: docker push balak1696/pdfapp_cicd:latest
-        
+
   deploy:
     needs: build
-    runs-on: [aws-ec2]
+    runs-on: ubuntu-latest  # AWS EC2 requires custom runners; adjust this if you're using a self-hosted runner
     steps:
-      - name: Pull image from docker hub
+      - name: Login to Docker Hub
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Pull image from Docker Hub
         run: docker pull balak1696/pdfapp_cicd:latest
-      - name: Delete old container
-        run: docker rm -f pdfapp_cicd-container
-      - name: Run docker container
-        run: docker run -d -p 3000:3000 --name pdfapp_cicd-container  balak1696/pdfapp_cicd
+
+      - name: Stop and remove the old container (if exists)
+        run: |
+          docker ps -q --filter "name=pdfapp_cicd-container" | grep -q . && docker rm -f pdfapp_cicd-container || echo "No container to remove"
+
+      - name: Run Docker container
+        run: |
+          docker run -d -p 3000:3000 --name pdfapp_cicd-container balak1696/pdfapp_cicd:latest
